[gd_scene format=3 uid="uid://xg6n57ptiauc"]

[ext_resource type="Shader" uid="uid://bqmri57k5jl58" path="res://src/post_processing_effects/horizontal_weep_transition.gdshader" id="1_5ydnw"]
[ext_resource type="Script" uid="uid://dpvqs0nja48gr" path="res://src/scenes/cutscene_2/cutscene_2.gd" id="1_n070e"]
[ext_resource type="Texture2D" uid="uid://crumvp1db24kb" path="res://assets/cutcenes/protag e alien jayvik.png" id="2_x7rp8"]
[ext_resource type="Texture2D" uid="uid://cvu80d1pfnyh0" path="res://assets/cutcenes/momento-lindo-colorido-alien.png" id="3_ugv7f"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x7rp8"]
shader = ExtResource("1_5ydnw")
shader_parameter/progress = 0.0
shader_parameter/reverse = true
shader_parameter/number_of_tiles = Vector2(16, 9)
shader_parameter/pixels_per_title = Vector2(16, 16)

[node name="Cutscene2" type="Node2D" unique_id=1019745681]
script = ExtResource("1_n070e")

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1989122677]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer" unique_id=2013229988]
material = SubResource("ShaderMaterial_x7rp8")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.83137256)

[node name="Sprite2" type="Sprite2D" parent="CanvasLayer" unique_id=928222324]
visible = false
position = Vector2(240, 135.00002)
scale = Vector2(0.352, 0.352)
texture = ExtResource("3_ugv7f")

[node name="Sprite1" type="Sprite2D" parent="CanvasLayer" unique_id=1295411730]
position = Vector2(240, 124)
texture = ExtResource("2_x7rp8")
